--- a/docs/package.json
+++ b/docs/package.json
@@ -9,10 +9,13 @@
     "docs:preview": "vitepress preview"
   },
   "devDependencies": {
-    "@element-plus/icons-vue": "^2.3.1",
-    "@element-plus/metadata": "^0.0.20240427",
     "@iconify-json/carbon": "^1.1.31",
     "@iconify-json/ri": "^1.1.20",
+    "@shikijs/markdown-it": "^1.3.0",
+    "@types/markdown-it": "^14.0.1",
+    "@types/markdown-it-container": "^2.0.10",
+    "markdown-it": "^14.1.0",
+    "markdown-it-container": "^4.0.0",
     "shiki": "^1.3.0",
     "unocss": "^0.59.4",
     "vitepress": "^1.1.3"
