--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
     "element-plus": "^2.7.2",
     "eslint": "^9.0.0",
     "esno": "^4.7.0",
+    "execa": "^8.0.1",
+    "fast-glob": "^3.3.2",
+    "fs-extra": "^11.2.0",
     "lint-staged": "^15.2.2",
     "pnpm": "^9.0.2",
     "rimraf": "^5.0.5",
