--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "packageManager": "pnpm@9.0.2",
   "description": "This is a formily element plus framework",
-  "author": "Anthony Fu <1321994008@qq.com>",
+  "author": "Nigi Wen <1321994008@qq.com>",
   "license": "MIT",
   "funding": "https://github.com/sponsors/wen403",
   "homepage": "https://github.com/wen403/nigi-element-plus#readme",
