--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nigi-element-plus",
   "type": "module",
   "version": "0.0.0",
-  "packageManager": "pnpm@9.0.2",
+  "packageManager": "pnpm@9.0.6",
   "description": "This is a formily element plus framework",
   "author": "Nigi Wen <1321994008@qq.com>",
   "license": "MIT",
@@ -45,11 +45,12 @@
     "lint": "eslint --cache .",
     "lint:fix": "nr lint --fix",
     "prepublishOnly": "nr build",
-    "release": "bumpp && npm publish",
-    "start": "esno src/index.ts",
-    "docs": "npm -C docs run docs:dev",
+    "release": "bumpp && pnpm publish",
     "test": "vitest",
     "typecheck": "tsc --noEmit",
+    "docs": "pnpm -C docs run dev",
+    "docs:build": "pnpm -C docs run build",
+    "docs:preview": "pnpm run -C docs preview",
     "prepare": "simple-git-hooks"
   },
   "devDependencies": {
