--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nigi-element-plus",
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "packageManager": "pnpm@9.0.6",
   "description": "This is a formily element plus framework",
   "author": "Nigi Wen <1321994008@qq.com>",
@@ -16,7 +16,12 @@
     "docs"
   ],
   "bugs": "https://github.com/wen403/nigi-element-plus/issues",
-  "keywords": [],
+  "keywords": [
+    "vue3",
+    "element-plus",
+    "formily",
+    "form"
+  ],
   "sideEffects": false,
   "exports": {
     ".": {
@@ -40,12 +45,11 @@
     "dist"
   ],
   "scripts": {
-    "build": "pnpm run docs:build & unbuild",
+    "build": "pnpm run docs:build",
     "dev": "unbuild --stub",
     "lint": "eslint --cache .",
     "lint:fix": "nr lint --fix",
-    "prepublishOnly": "nr build",
-    "release": "bumpp && pnpm publish",
+    "release": "bumpp -r",
     "test": "vitest",
     "typecheck": "tsc --noEmit",
     "docs": "pnpm -C docs run dev",
@@ -76,6 +80,7 @@
     "simple-git-hooks": "^2.11.1",
     "typescript": "^5.4.5",
     "unbuild": "^2.0.0",
+    "unocss": "^0.59.4",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.2.9",
