--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,17 @@
+# 忽略工作区根目录检查，允许在工作区的任何地方安装依赖项
 ignore-workspace-root-check=true
+
+# 在安装依赖项时将它们的依赖关系移动到更高的位置，以减少安装包的嵌套层级
+shamefully-hoist=true
+
+# 是否启用严格的对等依赖检查，如果设置为 false，将允许依赖项的版本范围不完全匹配
+strict-peer-dependencies=false
+
+# 在安装依赖项时自动安装对等依赖项
+auto-install-peers=true
+
+# 启用 shell 模拟器，模拟终端操作以执行命令
 shell-emulator=true
+
+# 是否启用包管理器的严格模式，如果设置为 false，将允许一些不符合规范的行为
+package-manager-strict=false
