--- a/package.json
+++ b/package.json
@@ -1,71 +1,36 @@
 {
-  "name": "nigi-element-plus",
+  "name": "@nigi-element-formily/monorepo",
   "type": "module",
   "version": "0.0.1",
-  "packageManager": "pnpm@9.0.6",
-  "description": "This is a formily element plus framework",
-  "author": "Nigi Wen <1321994008@qq.com>",
-  "license": "MIT",
-  "funding": "https://github.com/sponsors/wen403",
-  "homepage": "https://github.com/wen403/nigi-element-plus#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/wen403/nigi-element-plus.git"
-  },
-  "workspaces": [
-    "docs"
-  ],
-  "bugs": "https://github.com/wen403/nigi-element-plus/issues",
-  "keywords": [
-    "vue3",
-    "element-plus",
-    "formily",
-    "form"
-  ],
-  "sideEffects": false,
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
-    }
-  },
-  "main": "./dist/index.mjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "typesVersions": {
-    "*": {
-      "*": [
-        "./dist/*",
-        "./dist/index.d.ts"
-      ]
-    }
-  },
-  "files": [
-    "dist"
-  ],
+  "private": true,
+  "packageManager": "pnpm@9.1.0",
   "scripts": {
-    "build": "pnpm run docs:build",
-    "dev": "unbuild --stub",
+    "play": "pnpm -C playground run dev",
+    "docs": "pnpm -C docs run dev",
     "lint": "eslint --cache .",
     "lint:fix": "nr lint --fix",
     "release": "bumpp -r",
     "test": "vitest",
     "typecheck": "tsc --noEmit",
-    "docs": "pnpm -C docs run dev",
-    "docs:build": "pnpm -C docs run build",
-    "docs:preview": "pnpm run -C docs preview",
     "prepare": "simple-git-hooks"
+  },
+  "peerDependencies": {
+    "vue": "^3.4.25"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.14.0",
     "@antfu/ni": "^0.21.12",
     "@antfu/utils": "^0.7.7",
     "@element-plus/icons-vue": "^2.3.1",
+    "@nigi-element-formily/element-plus": "workspace:*",
     "@shikijs/vitepress-twoslash": "^1.3.0",
     "@types/node": "^20.12.7",
+    "@unocss/eslint-config": "^0.59.4",
+    "@unocss/eslint-plugin": "^0.59.4",
+    "@unocss/reset": "^0.59.4",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vueuse/core": "^10.9.0",
+    "@vueuse/math": "^10.9.0",
     "bumpp": "^9.4.0",
     "element-plus": "^2.7.2",
     "eslint": "^9.0.0",
@@ -78,6 +43,7 @@
     "rimraf": "^5.0.5",
     "sass": "^1.75.0",
     "simple-git-hooks": "^2.11.1",
+    "splitpanes": "^3.1.5",
     "typescript": "^5.4.5",
     "unbuild": "^2.0.0",
     "unocss": "^0.59.4",
@@ -85,7 +51,8 @@
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.2.9",
     "vitest": "^1.5.0",
-    "vue": "^3.4.25"
+    "vue": "^3.4.25",
+    "vue-tsc": "^2.0.6"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
