--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "target": "esnext",
+    "target": "ESNext",
     "jsx": "preserve",
-    "lib": ["esnext", "dom"],
-    "module": "esnext",
-    "moduleResolution": "bundler",
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
     "resolveJsonModule": true,
     "types": [
       "node",
@@ -18,19 +18,7 @@
     "skipDefaultLibCheck": true,
     "skipLibCheck": true
   },
-  "include": [
-    "docs/.vitepress/**/*",
-    "**/*"
-  ],
   "exclude": [
-    "**/dist/**",
-    "**/node_modules/**",
-    "**/client/**",
-    "**/playground/**",
-    "**/examples/**",
-    "**/fixtures/**",
-    "**/interactive/**",
-    "**/test/dts/**",
-    "packages/eslint-plugin/**"
+    "**/dist/**"
   ]
 }
