--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.2.9",
+    "vite-plugin-dts": "^3.9.1",
     "vitest": "^1.5.0",
     "vue": "^3.4.25",
     "vue-tsc": "^2.0.6"
